# cs383

./: .gitignore  LICENSE  README.md  package.yaml  simpl.cabal
app/: Main.hs
examples/: gc.spl  letrec.spl  refshow.spl
src/: Infer.hs  InferNL.hs  Temp.hs
src/Simpl/: Core.hs  Eval.hs  Infer.hs  Parser.hs
tests/: Eval.hs  Example.hs  Parser.hs  Tests.hs
